--- a/.vscode/settings.template.json
+++ b/.vscode/settings.template.json
@@ -1,5 +1,6 @@
 {
     "yaml.schemas": {
         "https://squidfunk.github.io/mkdocs-material/schema.json": "mkdocs.yml"
-    }
+    },
+    "python.formatting.provider": "black"
 }
