--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,13 +1,22 @@
 site_name: MetaGF
 theme:
   name: material
+  palette: 
+    primary: grey
 plugins:
   - search
   - bibtex:
       bib_file: "docs/refs.bib"
 markdown_extensions:
   - footnotes
+  - pymdownx.arithmatex:
+      generic: true
 
+extra_javascript:
+  - javascripts/mathjax.js
+  - https://polyfill.io/v3/polyfill.min.js?features=es6
+  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
 
 # plugins
 # https://github.com/shyamd/mkdocs-bibtex
+# https://squidfunk.github.io/mkdocs-material/reference/mathjax/
